--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 	</header>
 
 	<ul class="navigation">
-		<li><a href="page1">Project 1</a></li>
+		<li><a href="https://brianhernandez.github.io/introduction-to-css__multi-page-web-site/">Project 1</a></li>
 		<li><a href="https://brianhernandez.github.io/introduction-to-css__button-web-component">Project 2</a></li>
 		<li><a href="https://brianhernandez.github.io/introduction-to-css__profiles.moderndeveloper-sidebar">Project 3</a></li>
-		<li><a href="page4">Project 4</a></li>
+		<li><a href="https://brianhernandez.github.io/introduction-to-css__multi-page-web-site/forms.html">Project 4</a></li>
 		<li><a href="https://brianhernandez.github.io/introduction-to-css__the-calculator/">Project 5</a></li>
 		<li><a href="https://brianhernandez.github.io/introduction-to-css__product-listing/">Project 6</a></li>
 	</ul>
