Added descriptions on form Homepage buttons.

--- a/forms.html
+++ b/forms.html
@@ -8,19 +8,19 @@
 <body>
 	<header>
 		<h1>Brian Hernandez</h1>
-		<h2>Career Path 3</h2>
+		<h2>Form Projects Homepage</h2>
 		<p>“Self-mastery is the hardest job you will ever tackle.  If you do not conquer self, you will be conquered by self.  You may see at one and the same time both your best friend and your greatest enemy, by stepping in front of a mirror.”  <span>Napoleon Hill</span></p>
 	</header>
 
 	<ul class="navigation">
-		<li><a href="https://brianhernandez.github.io/introduction-to-css__signup-form/">Form 1</a></li>
-		<li><a href="https://brianhernandez.github.io/introduction-to-css__search-form/">Form 2</a></li>
-		<li><a href="https://brianhernandez.github.io/introduction-to-css__questionnaire-form/">Form 3</a></li>
-		<li><a href="https://brianhernandez.github.io/introduction-to-css__login-form/">Form 4</a></li>
-		<li><a href="https://brianhernandez.github.io/introduction-to-css__color-building-form/">Form 5</a></li>
-		<li><a href="https://brianhernandez.github.io/introduction-to-css__shipping-and-billing-form/">Form 6</a></li>
-		<li><a href="https://brianhernandez.github.io/introduction-to-css__scheduling-form/">Form 7</a></li>
-		<li><a href="https://brianhernandez.github.io/introduction-to-css__creditcard-form/">Form 8</a></li>
+		<li><a href="https://brianhernandez.github.io/introduction-to-css__signup-form/">Signup Form</a></li>
+		<li><a href="https://brianhernandez.github.io/introduction-to-css__search-form/">Search Form</a></li>
+		<li><a href="https://brianhernandez.github.io/introduction-to-css__questionnaire-form/">Questionnaire</a></li>
+		<li><a href="https://brianhernandez.github.io/introduction-to-css__login-form/">Login Form</a></li>
+		<li><a href="https://brianhernandez.github.io/introduction-to-css__color-building-form/">Color Building Form</a></li>
+		<li><a href="https://brianhernandez.github.io/introduction-to-css__shipping-and-billing-form/">Shipping & Billing Form</a></li>
+		<li><a href="https://brianhernandez.github.io/introduction-to-css__scheduling-form/">Scheduling Form</a></li>
+		<li><a href="https://brianhernandez.github.io/introduction-to-css__creditcard-form/">Credit Card Form</a></li>
 	</ul>
 
 	
