Added descriptions on buttons for index.html.

--- a/forms.html
+++ b/forms.html
@@ -9,7 +9,6 @@
 	<header>
 		<h1>Brian Hernandez</h1>
 		<h2>Form Projects Homepage</h2>
-		<p>“Self-mastery is the hardest job you will ever tackle.  If you do not conquer self, you will be conquered by self.  You may see at one and the same time both your best friend and your greatest enemy, by stepping in front of a mirror.”  <span>Napoleon Hill</span></p>
 	</header>
 
 	<ul class="navigation">
@@ -21,6 +20,7 @@
 		<li><a href="https://brianhernandez.github.io/introduction-to-css__shipping-and-billing-form/">Shipping & Billing Form</a></li>
 		<li><a href="https://brianhernandez.github.io/introduction-to-css__scheduling-form/">Scheduling Form</a></li>
 		<li><a href="https://brianhernandez.github.io/introduction-to-css__creditcard-form/">Credit Card Form</a></li>
+		<li><a href="https://brianhernandez.github.io/introduction-to-css__multi-page-web-site/">Projects Homepage</a></li>
 	</ul>
 
 	
