Added more tweaks.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<li><a href="https://brianhernandez.github.io/introduction-to-css__multi-page-web-site/">Multi-Site Project</a></li>
 		<li><a href="https://brianhernandez.github.io/introduction-to-css__button-web-component">Button Web Component Project</a></li>
 		<li><a href="https://brianhernandez.github.io/introduction-to-css__profiles.moderndeveloper-sidebar">Sidebar Project</a></li>
-		<li><a href="https://brianhernandez.github.io/introduction-to-css__multi-page-web-site/forms.html">Form Projects</a></li>
+		<li><a href="https://brianhernandez.github.io/introduction-to-css__multi-page-web-site/forms.html">Form Projects Homepage</a></li>
 		<li><a href="https://brianhernandez.github.io/introduction-to-css__the-calculator/">The Calculator Project</a></li>
 		<li><a href="https://brianhernandez.github.io/introduction-to-css__product-listing/">Product Listings Project</a></li>
 	</ul>
